--- a/Pages/about.html
+++ b/Pages/about.html
@@ -4,20 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
 
-        header {
-            background-color: #464242;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-        }
 
         #about-us {
             background-color: white;
@@ -43,9 +32,33 @@
 </head>
 <body>
 
-    <header>
-        <h1>Welcome to Our Website</h1>
-    </header>
+    <div
+      style=" border: 1px solid black;border-radius: 10px; height: 30px; display: flex; flex-direction: row; align-items: center; gap: 5rem;justify-content: space-between; padding: 0.5rem;"
+    >
+      <div>
+        <a href="cart.html">Cart</a>
+
+        <a href="moviedes.html">Movie Description</a>
+
+        <a href="movies.html">Movies</a>
+        
+        <a href="about.html">About</a>
+      </div>
+
+      <div
+        style="
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          gap: 5rem;
+        "
+      >
+        <a href="Login.html">Login</a>
+
+        <a href="Signup.html">Sign Up</a>
+      </div>
+    </div>
+
 
     <section id="about-us">
         <h2>About Us</h2>
