--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -37,6 +37,8 @@
         <a href="moviedes.html">Movie Description</a>
 
         <a href="movies.html">Movies</a>
+
+        <a href="about.html">About</a>
       </div>
 
       <div
@@ -52,7 +54,6 @@
         <a href="Signup.html">Sign Up</a>
       </div>
     </div>
-
     <header>
       <h1>Your Cart</h1>
       <p id="userEmailDisplay"></p>
