--- a/Pages/moviedes.html
+++ b/Pages/moviedes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Details</title>
     <script type="module" src="../moviedesc.js" defer></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <style>
@@ -35,6 +35,8 @@
         <a href="moviedes.html">Movie Description</a>
 
         <a href="movies.html">Movies</a>
+
+        <a href="about.html">About</a>
       </div>
 
       <div
