--- a/Pages/movies.html
+++ b/Pages/movies.html
@@ -40,6 +40,8 @@
         <a href="moviedes.html">Movie Description</a>
 
         <a href="movies.html">Movies</a>
+
+        <a href="about.html">About</a>
       </div>
 
       <div
