--- a/Pages/Login.html
+++ b/Pages/Login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link rel="stylesheet" href="../css/Login.css" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div
@@ -27,6 +27,8 @@
         <a href="moviedes.html">Movie Description</a>
 
         <a href="movies.html">Movies</a>
+
+        <a href="about.html">About</a>
       </div>
 
       <div
