--- a/Pages/Signup.html
+++ b/Pages/Signup.html
@@ -9,7 +9,17 @@
   </head>
   <body>
     <div
-      style=" border: 1px solid black;border-radius: 10px; height: 30px; display: flex; flex-direction: row; align-items: center; gap: 5rem;justify-content: space-between; padding: 0.5rem;"
+      style="
+        border: 1px solid black;
+        border-radius: 10px;
+        height: 30px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 5rem;
+        justify-content: space-between;
+        padding: 0.5rem;
+      "
     >
       <div>
         <a href="cart.html">Cart</a>
@@ -17,6 +27,8 @@
         <a href="moviedes.html">Movie Description</a>
 
         <a href="movies.html">Movies</a>
+
+        <a href="about.html">About</a>
       </div>
 
       <div
